--- a/assignment3.html
+++ b/assignment3.html
@@ -67,6 +67,7 @@
         let red = $(blue).parent().css('backgroundColor','red');
         blue.style.backgroundColor = "blue";
         event.stopPropagation();
+        this.removeEventListener('click',arguments.callee)
       })
     });
     // 각각의 div를 클릭하면, 클릭한 div와 바로 상위 div의 색깔이 각각, 파랑 / 빨강으로 바뀌게 해주세요
